// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compatibility route /publications should return only public sources 1`] = `
Array [
  Object {
    "enabled": true,
    "id": "a",
    "image": "http://a.com",
    "name": "A",
  },
  Object {
    "enabled": true,
    "id": "b",
    "image": "http://b.com",
    "name": "B",
  },
]
`;

exports[`members field should return source members 1`] = `
Object {
  "source": Object {
    "id": "a",
    "members": Object {
      "edges": Array [
        Object {
          "node": Object {
            "role": "member",
            "source": Object {
              "id": "a",
            },
            "user": Object {
              "id": "2",
            },
          },
        },
        Object {
          "node": Object {
            "role": "owner",
            "source": Object {
              "id": "a",
            },
            "user": Object {
              "id": "1",
            },
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "dGltZToxNjcxNDA4MDAwMDAw",
        "hasNextPage": false,
      },
    },
  },
}
`;

exports[`members field should return source members for private source when the user is a member 1`] = `
Object {
  "edges": Array [
    Object {
      "node": Object {
        "role": "member",
        "source": Object {
          "id": "a",
        },
        "user": Object {
          "id": "2",
        },
      },
    },
    Object {
      "node": Object {
        "role": "owner",
        "source": Object {
          "id": "a",
        },
        "user": Object {
          "id": "1",
        },
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "dGltZToxNjcxNDA4MDAwMDAw",
    "hasNextPage": false,
  },
}
`;

exports[`query mySourceMemberships should return source memberships 1`] = `
Object {
  "mySourceMemberships": Object {
    "edges": Array [
      Object {
        "node": Object {
          "source": Object {
            "id": "a",
          },
          "user": Object {
            "id": "2",
          },
        },
      },
      Object {
        "node": Object {
          "source": Object {
            "id": "b",
          },
          "user": Object {
            "id": "2",
          },
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "dGltZToxNjcxNDA4MDAwMDAw",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query source current member should return current member as member 1`] = `
Object {
  "source": Object {
    "currentMember": Object {
      "role": "member",
      "roleRank": 0,
    },
    "id": "a",
    "permissions": Array [
      "view",
    ],
  },
}
`;

exports[`query source current member should return current member as owner 1`] = `
Object {
  "source": Object {
    "currentMember": Object {
      "role": "owner",
      "roleRank": 10,
    },
    "id": "a",
    "permissions": Array [
      "view",
      "post_delete",
      "remove_member",
      "delete",
      "edit",
    ],
  },
}
`;

exports[`query source current member should return null for annonymous users 1`] = `
Object {
  "source": Object {
    "currentMember": null,
    "id": "a",
    "permissions": null,
  },
}
`;

exports[`query source current member should return null for user that's not in the source 1`] = `
Object {
  "source": Object {
    "currentMember": null,
    "id": "a",
    "permissions": null,
  },
}
`;

exports[`query source should return source by id 1`] = `
Object {
  "source": Object {
    "id": "a",
    "image": "http://a.com",
    "name": "A",
    "public": true,
  },
}
`;

exports[`query sourceMembers should return source members of private source when user is a member 1`] = `
Object {
  "sourceMembers": Object {
    "edges": Array [
      Object {
        "node": Object {
          "role": "owner",
          "roleRank": 10,
          "source": Object {
            "id": "a",
          },
          "user": Object {
            "id": "1",
          },
        },
      },
      Object {
        "node": Object {
          "role": "member",
          "roleRank": 0,
          "source": Object {
            "id": "a",
          },
          "user": Object {
            "id": "2",
          },
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "dGltZToxNjcxNDk0NDAwMDAw",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query sourceMembers should return source members of public source 1`] = `
Object {
  "sourceMembers": Object {
    "edges": Array [
      Object {
        "node": Object {
          "role": "owner",
          "roleRank": 10,
          "source": Object {
            "id": "a",
          },
          "user": Object {
            "id": "1",
          },
        },
      },
      Object {
        "node": Object {
          "role": "member",
          "roleRank": 0,
          "source": Object {
            "id": "a",
          },
          "user": Object {
            "id": "2",
          },
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "dGltZToxNjcxNDk0NDAwMDAw",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query sources should flag that more pages available 1`] = `
Object {
  "sources": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "a",
          "image": "http://a.com",
          "name": "A",
          "public": true,
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjA=",
      "hasNextPage": true,
    },
  },
}
`;

exports[`query sources should return only active sources 1`] = `
Object {
  "sources": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "a",
          "image": "http://a.com",
          "name": "A",
          "public": true,
        },
      },
      Object {
        "node": Object {
          "id": "b",
          "image": "http://b.com",
          "name": "B",
          "public": true,
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query sources should return only public sources 1`] = `
Object {
  "sources": Object {
    "edges": Array [
      Object {
        "node": Object {
          "id": "a",
          "image": "http://a.com",
          "name": "A",
          "public": true,
        },
      },
      Object {
        "node": Object {
          "id": "b",
          "image": "http://b.com",
          "name": "B",
          "public": true,
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "YXJyYXljb25uZWN0aW9uOjE=",
      "hasNextPage": false,
    },
  },
}
`;
